<resources>
    <string name="app_name">Nav demo</string>
    <string name="mark">points </string>
    <string name="map_name">map name </string>
    <string name="default_nav_map">default navigation map </string>
    <string name="map_xy">map coordinates: </string>
    <string name="real_xy">actual coordinates: </string>
    <string name="text_angle"> azimuth angle: </string>
    <string name="text_radian"> azimuth radian: </string>
    <string name="starting_nav" type="id">"Now navigation..."</string>
    <string name="error">"Error: "</string>
    <string name="start_nav_success">Open navigation successfully </string>
    <string name="start_nav_fail">"Open navigation failed:"</string>
    <string name="get_map_list_error">"Get map list error:"</string>
    <string name="get_map_list_success">Get map list success</string>
    <string name="geting_nav_state"> getting navigation status </string>
    <string name="get_nav_state">get navigation status</string>
    <string name="stop_nav_success">stop navigation success</string>
    <string name="stop_nav_fail">"Stop navigation failed:"</string>
    <string name="stoping_nav"> stopping navigation </string>
    <string name="navigating_to">"Navigate to: "</string>
    <string name="arrived">"Navigation arrives: "</string>
    <string name="nav_error">"Navigation error:" </string>
    <string name="cancel_nav_success"> "Cancel navigation success" </string>
    <string name="cancel_nav_fail">"Cancel navigation failed:"</string>
    <string name="recog_text">"The recognized text is:"</string>
    <string name="test_text">"Hangzhou Amy Robot Co., Ltd."</string>
    <string name="blue_lamp">light ring blue </string>
    <string name="green_lamp">light ring green </string>
    <string name="reset_head">Head reset </string>
    <string name="bow_down">head down </string>
    <string name="head_up">head up </string>
    <string name="back">start back </string>
    <string name="go_forward">Starting forward</string>
    <string name="turn_left">Rotate to the left </string>
    <string name="trun_right">Rotate to the right </string>
    <string name="turn_head_left">head to the left </string>
    <string name="turn_head_right">head to the right </string>
    <string name="start_speak"> start broadcasting voice: </string>
    <string name="dancing">The following is a dance for everyone</string>
    <string name="speak_done_and_dance">The voice broadcast is finished, start dancing </string>
    <string name="start_dance_and_click_stop"> dancing, click the back button to stop dancing </string>
    <string name="init_timeout"> initialization timeout </string>
    <string name="start_default_nav">turn on the default navigation </string>
    <string name="stop_nav">stop navigation </string>
    <string name="voice_test"> voice interface </string>
    <string name="refresh_map_list"> refresh map list </string>
    <string name="start">start </string>
    <string name="des">Please put the robot in a slightly empty position, then open the emergency stop switch behind the robot, then click the start button </string>
    <string name="speak_start">Start broadcast </string>
    <string name="speak_stop">stop broadcasting </string>
    <string name="pause_speak">suspend broadcast </string>
    <string name="resume_speak">Continue to broadcast </string>
    <string name="start_listen">start listening </string>
    <string name="stop_listen">stop listening </string>
    <string name="get_mark_list">Get the tag list </string>
    <string name="cancel_nav"> cancel navigation </string>
    <string name="mark_pos_nav">mark coordinate navigation </string>
    <string name="mark_name_nav"> tag name navigation </string>
    <string name="nav_status"> navigation status </string>
</resources>