<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_start_speak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speak_start" />

    <Button
        android:id="@+id/btn_stop_speak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speak_stop" />

    <Button
        android:id="@+id/btn_pause_speak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_speak" />

    <Button
        android:id="@+id/btn_resume_speak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume_speak" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_start_listen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_listen" />

        <TextView
            android:id="@+id/tv_listen_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_stop_listen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_listen" />

</LinearLayout>